--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "apexcharts": "^3.42.0",
     "flowbite": "^1.8.1",
+    "tw-elements": "^1.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
